--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <attr name="autoNavigation" format="boolean" />
     <attr name="navigationType" format="enum">
         <enum name="none" value="0" />
         <enum name="back" value="1" />
@@ -8,6 +9,7 @@
     </attr>
 
     <declare-styleable name="TopAppBar">
+        <attr name="autoNavigation" />
         <attr name="navigationType" />
     </declare-styleable>
 
@@ -18,6 +20,10 @@
             <enum name="large" value="2" />
         </attr>
         <attr name="navigationType" />
+        <attr name="title" />
+        <attr name="titleCentered" />
+        <attr name="subtitle" />
+        <attr name="subtitleCentered" />
         <attr name="titleMargin" format="dimension" />
         <attr name="titleMarginStart" format="dimension" />
         <attr name="titleMarginEnd" format="dimension" />
