--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:appBarType="small"
+    app:appBarType="large"
     app:navigationType="back"
-    app:titleCentered="true"
     app:title="测试主页">
 
     <androidx.core.widget.NestedScrollView
