--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.Learn.primarySurface" />
+    <style name="AppTheme" parent="Theme.Learn.Surface" />
 
 </resources>
