--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -8,11 +8,77 @@
         <enum name="close" value="2" />
     </attr>
 
+    <!-- 自动文字大小调整 -->
+    <declare-styleable name="AutoSizeTextView">
+        <attr name="ast_autoSizeEnable" format="boolean" />
+        <attr name="ast_minTextSize" format="dimension" />
+        <attr name="ast_precision" format="float" />
+    </declare-styleable>
+
+    <!-- 重力粘性对齐RecyclerView -->
+    <declare-styleable name="GravitySnapRecyclerView">
+        <attr name="snapGravity" format="enum">
+            <enum name="start" value="0" />
+            <enum name="top" value="1" />
+            <enum name="end" value="2" />
+            <enum name="bottom" value="3" />
+            <enum name="center" value="4" />
+        </attr>
+        <attr name="snapEnabled" format="boolean" />
+        <attr name="snapLastItem" format="boolean" />
+        <attr name="snapToPadding" format="boolean" />
+        <attr name="snapScrollMsPerInch" format="float" />
+        <attr name="snapMaxFlingSizeFraction" format="float" />
+    </declare-styleable>
+
+    <attr name="shimmer_color" format="color" />
+    <attr name="shimmer_animation_duration" format="integer" />
+    <attr name="shimmer_auto_start" format="boolean" />
+    <attr name="shimmer_angle" format="integer" />
+    <attr name="shimmer_mask_width" format="float" />
+    <attr name="shimmer_gradient_center_color_width" format="float" />
+    <attr name="shimmer_reverse_animation" format="boolean" />
+    <!-- 蒙版ConstraintLayout -->
+    <declare-styleable name="ShimmerConstraintLayout">
+        <attr name="shimmer_color" />
+        <attr name="shimmer_animation_duration" />
+        <attr name="shimmer_auto_start" />
+        <attr name="shimmer_angle" />
+        <attr name="shimmer_mask_width" />
+        <attr name="shimmer_gradient_center_color_width" />
+        <attr name="shimmer_reverse_animation" />
+    </declare-styleable>
+    <!-- 蒙版FrameLayout -->
+    <declare-styleable name="ShimmerFrameLayout">
+        <attr name="shimmer_color" />
+        <attr name="shimmer_animation_duration" />
+        <attr name="shimmer_auto_start" />
+        <attr name="shimmer_angle" />
+        <attr name="shimmer_mask_width" />
+        <attr name="shimmer_gradient_center_color_width" />
+        <attr name="shimmer_reverse_animation" />
+    </declare-styleable>
+    <!-- 蒙版LinearLayout -->
+    <declare-styleable name="ShimmerLinearLayout">
+        <attr name="shimmer_color" />
+        <attr name="shimmer_animation_duration" />
+        <attr name="shimmer_auto_start" />
+        <attr name="shimmer_angle" />
+        <attr name="shimmer_mask_width" />
+        <attr name="shimmer_gradient_center_color_width" />
+        <attr name="shimmer_reverse_animation" />
+    </declare-styleable>
+
+    <!-- 顶部应用栏 -->
     <declare-styleable name="TopAppBar">
         <attr name="autoNavigation" />
         <attr name="navigationType" />
     </declare-styleable>
-
+    <!-- 顶部应用栏布局子项配置 -->
+    <declare-styleable name="TopAppBarLayout_Layout">
+        <attr name="isTopAppBarChild" format="boolean" />
+    </declare-styleable>
+    <!-- 顶部应用栏布局 -->
     <declare-styleable name="TopAppBarLayout">
         <attr name="setActionBar" format="boolean" />
         <attr name="appBarType" format="enum">
@@ -30,9 +96,7 @@
         <attr name="titleMarginEnd" format="dimension" />
         <attr name="titleMarginTop" format="dimension" />
         <attr name="titleMarginBottom" format="dimension" />
-
         <attr name="titleBackground" format="reference" />
-
         <attr name="titleCollapseEnabled" format="boolean" />
         <attr name="titleCollapseMode" />
         <attr name="collapsedTitleGravity" />
@@ -47,6 +111,34 @@
         <attr name="titleTextEllipsize" />
         <attr name="expandedTitleTextColor" format="color|reference" />
         <attr name="collapsedTitleTextColor" format="color|reference" />
+    </declare-styleable>
+
+    <attr name="sizeRatio" format="string" />
+    <!-- 宽高比布局 -->
+    <declare-styleable name="RatioView">
+        <!-- 宽高比例 -->
+        <attr name="sizeRatio" />
+    </declare-styleable>
+    <declare-styleable name="RatioCardView">
+        <!-- 宽高比例 -->
+        <attr name="sizeRatio" />
+    </declare-styleable>
+    <declare-styleable name="RatioConstraintLayout">
+        <!-- 宽高比例 -->
+        <attr name="sizeRatio" />
+    </declare-styleable>
+    <declare-styleable name="RatioFrameLayout">
+        <!-- 宽高比例 -->
+        <attr name="sizeRatio" />
+    </declare-styleable>
+
+    <declare-styleable name="VerticalTextView">
+        <attr name="direction">
+            <enum name="upToDown" value="0" />
+            <enum name="downToUp" value="1" />
+            <enum name="leftToRight" value="2" />
+            <enum name="rightToLeft" value="3" />
+        </attr>
     </declare-styleable>
 
 </resources>
