--- a/stateLayout/src/main/res/values/attrs.xml
+++ b/stateLayout/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="StateLayout">
-        <attr name="atFirstIsSuccess" format="boolean" />
+        <attr name="firstIsSuccess" format="boolean" />
     </declare-styleable>
 </resources>
