--- a/app/src/main/res/layout/activity_state_layout.xml
+++ b/app/src/main/res/layout/activity_state_layout.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chooongg.core.widget.TopAppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.chooongg.stateLayout.StateLayout
+        android:id="@+id/state_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Progress" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_progress_line"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LineProgress" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </com.chooongg.stateLayout.StateLayout>
+
+</com.chooongg.core.widget.TopAppBarLayout>
