--- a/app/src/main/res/layout/activity_top_app_bar_layout_medium.xml
+++ b/app/src/main/res/layout/activity_top_app_bar_layout_medium.xml
@@ -9,6 +9,7 @@
     <com.chooongg.core.widget.NestedScrollWebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="?colorSurface" />
 
 </com.chooongg.core.widget.TopAppBarLayout>
